# axum-learning-collections

./: README.md
axum-start-demo/: Cargo.toml
axum-start-demo/src/: main.rs
axum-start-demo/src/configs/: application_config.rs  constants.rs  mod.rs  server.rs
axum-start-demo/src/domain/: mod.rs  user_domain.rs
axum-start-demo/src/page/: mod.rs  page_request.rs
axum-start-demo/src/redis_module/: CustomRedisClient.rs  mod.rs
axum-start-demo/src/resource/: application.yaml  log.yml
axum-start-demo/src/response/: mod.rs  service_result.rs
