[package]
name = "axum-start-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.0", features = ["full"] }
tower-http= { version ="0.4.0", features=["full"] }
#json serialize
serde = "1.0.160"
serde_json = "1.0.96"
#datetime
chrono = "0.4.24"
#log
log = "0.4.17"
log4rs = "1.2.0"
#config
config = "0.11.0"
dotenv = "0.15.0"
envy = "0.4.2"
lazy_static = "1.4.0"
 